Fixing alignment on stream.

--- a/app/assets/stylesheets/views/pages.css.scss
+++ b/app/assets/stylesheets/views/pages.css.scss
@@ -88,7 +88,7 @@
   h2 {
     font-weight: bold;
     text-align: center;
-    margin: 25px 0;
+    margin: 0 0 25px;
   }
 }
 
